--- a/docs/assets/css/obvius-admin/admin.css
+++ b/docs/assets/css/obvius-admin/admin.css
@@ -4604,7 +4604,7 @@ form.obvius-navigator div.obvius-subdocs table tr.obvius-a:hover,
  }
 
  input[type="button"]:hover {
-   background-color: #999;
+   background-color: #bbb;
    color: #fff;
  }
 
