--- a/less/thumbnails.less
+++ b/less/thumbnails.less
@@ -97,8 +97,8 @@ img {
   }
 
   &.img-default {
-    // "På linje med tekst"
-    margin: 15px 0;
+    // "På linje med tekst" - default
+    margin: 5px 0;
     float: none;
     &:extend(.clearfix all);
   }
@@ -119,9 +119,3 @@ figcaption {
   display: table-caption;
   caption-side: bottom;
 }
-// .fritekst_over_img,
-// .uden-boks-top {
-// We no longer support this!
-// position: absolute;
-// margin-top: -39px;
-// }
