--- a/docs/assets/css/scroll-effects/scroll-effects.css
+++ b/docs/assets/css/scroll-effects/scroll-effects.css
@@ -1,4 +1,8 @@
 /* Use with /bootstrap/dist/js/scroll-fadeIn.min.js */
+html {
+  scroll-behavior: smooth;
+}
+
 .js-scroll {
   opacity: 0;
   transition: opacity 500ms;
