--- a/docs/assets/css/obvius-admin/admin.css
+++ b/docs/assets/css/obvius-admin/admin.css
@@ -4326,23 +4326,20 @@ form.obvius-navigator div.obvius-subdocs table tr.obvius-a:hover,
    position: absolute;
    right: 27px;
    margin: 0.5em;
-   background-origin: content-box;
-   background-size: cover;
+   background-size: contain;
    background-position: center center;
    background-repeat: no-repeat;
-   background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='iso-8859-1'%3F%3E%3Csvg version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' viewBox='0 0 477.427 477.427' style='enable-background:new 0 0 477.427 477.427;' xml:space='preserve'%3E%3Cg%3E%3Cpolygon points='101.82,187.52 57.673,143.372 476.213,143.372 476.213,113.372 57.181,113.372 101.82,68.733 80.607,47.519 0,128.126 80.607,208.733 '/%3E%3Cpolygon points='396.82,268.694 375.607,289.907 420,334.301 1.213,334.301 1.213,364.301 420,364.301 375.607,408.694 396.82,429.907 477.427,349.301 '/%3E%3C/g%3E%3C/svg%3E");
-
+   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 77.81 91.15'%3E%3Cpath fill='%231a1a1a' class='cls-1' d='M38.88,8.87a10.06,10.06,0,0,0-10,10v27c-1.65-2.21-3.45-3.9-5.56-4.48a9.35,9.35,0,0,0-7.22,1.25c-2.11,1.67-4,3-4.69,5.66s-.19,5.26,1,8.41c5.86,14,13,27.65,21.71,37.69a3.41,3.41,0,0,0,2.5,1.15h30a3.41,3.41,0,0,0,2-.66c3.49-2.58,6.09-6.76,8.27-11.68a65,65,0,0,0,4.69-16.15c.86-5.55.92-11-.35-15.56s-4.69-8.72-9.76-9.31a15.51,15.51,0,0,0-2.53.21,8.48,8.48,0,0,0-2.5-3,8.89,8.89,0,0,0-5.42-1.7,7.14,7.14,0,0,0-3.27,1,8.38,8.38,0,0,0-1.21-1.45,9.08,9.08,0,0,0-5.46-1.74,9.71,9.71,0,0,0-2.22.28v-17A10.06,10.06,0,0,0,38.88,8.87Zm0,6.67a3.26,3.26,0,0,1,3.34,3.33V42.22a3.33,3.33,0,0,0,6.36,1.42c1.21-1.57,2.47-1.54,4.06-1,.4.29.69.46.69,1.77a3.34,3.34,0,0,0,6.33,1.5c.86-1.8,1.43-1.58,3-1,.46.32.73.48.73,1.74a3.33,3.33,0,0,0,5.59,2.43c0,.07,1.49-.4,2-.21,2.06.31,3.07,1.49,3.92,4.48s.94,7.78.18,12.71a59.32,59.32,0,0,1-4.24,14.46,25.9,25.9,0,0,1-5.56,8.37H38.33c-6.22-8.42-20.56-31.07-20.5-38.77a4.14,4.14,0,0,1,3.72-2.29c1.77.89,2.21,1.81,3.26,3.71l4.42,8.83a3.33,3.33,0,0,0,6.32-1.5v-40a3.26,3.26,0,0,1,3.33-3.33Z' transform='translate(-11.09 -4.42)'/%3E%3Cpath class='cls-1' d='M88.91,17.76a3.51,3.51,0,0,0-1-2.37l-10-10C76.72,4.31,74.35,4,73.07,5.25a3.47,3.47,0,0,0,.17,4.86l4.31,4.31H58.89a3.34,3.34,0,0,0,0,6.67H77.55L73.24,25.4a3.36,3.36,0,0,0-.17,4.86,3.69,3.69,0,0,0,4.86-.14l10-10a3.21,3.21,0,0,0,1-2.36Z' transform='translate(-11.09 -4.42)'/%3E%3C/svg%3E");
  }
 
  table.gcedit tbody th input.slide-disabled {
    position: absolute;
    right: 27px;
    margin: 0.5em;
-   background-origin: content-box;
-   background-size: cover;
+   background-size: contain;
    background-position: center center;
    background-repeat: no-repeat;
-   background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='iso-8859-1'%3F%3E%3Csvg version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' viewBox='0 0 477.427 477.427' style='enable-background:new 0 0 477.427 477.427;' xml:space='preserve'%3E%3Cg%3E%3Cpolygon points='101.82,187.52 57.673,143.372 476.213,143.372 476.213,113.372 57.181,113.372 101.82,68.733 80.607,47.519 0,128.126 80.607,208.733 '/%3E%3Cpolygon points='396.82,268.694 375.607,289.907 420,334.301 1.213,334.301 1.213,364.301 420,364.301 375.607,408.694 396.82,429.907 477.427,349.301 '/%3E%3C/g%3E%3C/svg%3E");
+   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 77.81 91.15'%3E%3Cpath fill='%231a1a1a' class='cls-1' d='M38.88,8.87a10.06,10.06,0,0,0-10,10v27c-1.65-2.21-3.45-3.9-5.56-4.48a9.35,9.35,0,0,0-7.22,1.25c-2.11,1.67-4,3-4.69,5.66s-.19,5.26,1,8.41c5.86,14,13,27.65,21.71,37.69a3.41,3.41,0,0,0,2.5,1.15h30a3.41,3.41,0,0,0,2-.66c3.49-2.58,6.09-6.76,8.27-11.68a65,65,0,0,0,4.69-16.15c.86-5.55.92-11-.35-15.56s-4.69-8.72-9.76-9.31a15.51,15.51,0,0,0-2.53.21,8.48,8.48,0,0,0-2.5-3,8.89,8.89,0,0,0-5.42-1.7,7.14,7.14,0,0,0-3.27,1,8.38,8.38,0,0,0-1.21-1.45,9.08,9.08,0,0,0-5.46-1.74,9.71,9.71,0,0,0-2.22.28v-17A10.06,10.06,0,0,0,38.88,8.87Zm0,6.67a3.26,3.26,0,0,1,3.34,3.33V42.22a3.33,3.33,0,0,0,6.36,1.42c1.21-1.57,2.47-1.54,4.06-1,.4.29.69.46.69,1.77a3.34,3.34,0,0,0,6.33,1.5c.86-1.8,1.43-1.58,3-1,.46.32.73.48.73,1.74a3.33,3.33,0,0,0,5.59,2.43c0,.07,1.49-.4,2-.21,2.06.31,3.07,1.49,3.92,4.48s.94,7.78.18,12.71a59.32,59.32,0,0,1-4.24,14.46,25.9,25.9,0,0,1-5.56,8.37H38.33c-6.22-8.42-20.56-31.07-20.5-38.77a4.14,4.14,0,0,1,3.72-2.29c1.77.89,2.21,1.81,3.26,3.71l4.42,8.83a3.33,3.33,0,0,0,6.32-1.5v-40a3.26,3.26,0,0,1,3.33-3.33Z' transform='translate(-11.09 -4.42)'/%3E%3Cpath class='cls-1' d='M88.91,17.76a3.51,3.51,0,0,0-1-2.37l-10-10C76.72,4.31,74.35,4,73.07,5.25a3.47,3.47,0,0,0,.17,4.86l4.31,4.31H58.89a3.34,3.34,0,0,0,0,6.67H77.55L73.24,25.4a3.36,3.36,0,0,0-.17,4.86,3.69,3.69,0,0,0,4.86-.14l10-10a3.21,3.21,0,0,0,1-2.36Z' transform='translate(-11.09 -4.42)'/%3E%3C/svg%3E");
    background-color: #999;
  }
 
