Adjusted line-height in grid boxes for better accessibility

--- a/less/ku-gridboxes.less
+++ b/less/ku-gridboxes.less
@@ -16,7 +16,7 @@
   width: 100%;
   position: relative;
   font-size: @font-size-body-desktop;
-  line-height: @line-height-computed;
+  line-height: @line-height-base;
   border-radius: 2px;
   display: flex;
   flex-direction: column;
