Line-height tweak

--- a/less/ku-advanced-lists.less
+++ b/less/ku-advanced-lists.less
@@ -29,7 +29,7 @@
       flex: 1 1 auto;
       order: 2;
       padding: 15px;
-      line-height: @line-height-small;
+      line-height: @line-height-computed;
 
       .list-header {
         margin-top: 0;
