--- a/docs/assets/css/obvius-admin/admin.css
+++ b/docs/assets/css/obvius-admin/admin.css
@@ -4326,6 +4326,7 @@ form.obvius-navigator div.obvius-subdocs table tr.obvius-a:hover,
    position: absolute;
    right: 27px;
    margin: 0.5em;
+   border-right: 0;
    background-size: contain;
    padding: 2px 1px 2px 2px;
    background-origin: content-box;
