--- a/docs/assets/css/obvius-admin/admin.css
+++ b/docs/assets/css/obvius-admin/admin.css
@@ -82,13 +82,6 @@ Hide/show
    top: 0;
  }
 
- table.gcedit tbody th input.class {
-   position: absolute;
-   right: 2.5em;
-   margin: 0.5em;
-   background-position: -142px 2px;
- }
-
  #gridcontent-dialog-class {
    width: 30em;
  }
@@ -4315,18 +4308,27 @@ form.obvius-navigator div.obvius-subdocs table tr.obvius-a:hover,
    background-position: -62px -14px;
  }
 
+ table.gcedit tbody th input.class {
+   /* position: absolute;
+   right: 2.5em; */
+   float: right;
+   margin: 0.5em 3px 0.5em 3px;
+   background-position: -142px 2px;
+ }
+
  table.gcedit tbody th input.close {
-   position: absolute;
-   right: 0;
-   margin: 0.5em;
+   /* position: absolute;
+   right: 0; */
+   float: right;
+   margin: 0.5em 3px 0.5em 3px;
    background-position: -94px -126px;
  }
 
  table.gcedit tbody th input.slide {
-   position: absolute;
-   right: 27px;
-   margin: 0.5em;
-   border-right: 0;
+   /* position: absolute;
+   right: 27px; */
+   float: right;
+   margin: 0.5em 3px 0.5em 3px;
    background-size: contain;
    padding: 2px 1px 2px 2px;
    background-origin: content-box;
@@ -4337,9 +4339,10 @@ form.obvius-navigator div.obvius-subdocs table tr.obvius-a:hover,
 
  table.gcedit tbody th input.slide-disabled {
    box-shadow: inset 0px 1px 5px #555;
-   position: absolute;
-   right: 27px;
-   margin: 0.5em;
+   /* position: absolute;
+   right: 27px; */
+   float: right;
+   margin: 0.5em 3px 0.5em 3px;
    background-size: contain;
    padding: 2px 1px 2px 2px;
    background-origin: content-box;
