--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -111,6 +111,7 @@
       border-radius: @border-radius-base;
 
       input[type="text"] {
+        .placeholder(@color: @gray-444);
         opacity: 0.85;
 
         &:placeholder-shown {
