--- a/less/bootstrap.less
+++ b/less/bootstrap.less
@@ -58,6 +58,7 @@
 
 // KU specific
 //@import "ku-visited-links.less";
+@import "ku-colors.less";
 @import "ku-cms-components.less";
 @import "ku-misc.less";
 @import "ku-branding.less";
