--- a/less/ku-gridboxes.less
+++ b/less/ku-gridboxes.less
@@ -343,82 +343,82 @@
 
 .box {
   &-red1 {
-    .box-color(@gridbox-text-light; @red1);
+    //.box-color(@gridbox-text-light; @red1);
     .gridbox-color(@gridbox-text-light; @red1; darken(@red1, 5%); @red1; @red1; 83%);
   }
 
   &-red2 {
-    .box-color(@gridbox-text-light; @red2);
+    //.box-color(@gridbox-text-light; @red2);
     .gridbox-color(@gridbox-text-light; @red2; darken(@red2, 5%); @red2; @red2; 83%);
   }
 
   &-red3 {
-    .box-color(@white-color; @red3);
+    //.box-color(@white-color; @red3);
     .gridbox-color(@white-color; @red3; darken(@red3, 5%); @red3; @red3; 83%);
   }
   // Blues family
   &-blue1 {
-    .box-color(@gridbox-text-light; @blue1);
+    //.box-color(@gridbox-text-light; @blue1);
     .gridbox-color(@gridbox-text-light; @blue1; darken(@blue1, 5%); @blue1; @blue1; 83%);
   }
 
   &-blue2 {
-    .box-color(@gridbox-text-light; @blue2);
+    //.box-color(@gridbox-text-light; @blue2);
     .gridbox-color(@gridbox-text-light; @blue2; darken(@blue2, 5%); @blue2; @blue2; 83%);
   }
 
   &-blue3 {
-    .box-color(@gridbox-text-dark; @blue3);
+    //.box-color(@gridbox-text-dark; @blue3);
     .gridbox-color(@gridbox-text-dark; @blue3; darken(@blue3, 5%); @blue3; @gridbox-text-dark; 83%);
   }
   // Teals family
   &-teal1 {
-    .box-color(@gridbox-text-light; @teal1);
+    //.box-color(@gridbox-text-light; @teal1);
     .gridbox-color(@gridbox-text-light; @teal1; darken(@teal1, 5%); @teal1; @teal1; 83%);
   }
 
   &-teal2 {
-      .box-color(@gridbox-text-light; @teal2);
+      //.box-color(@gridbox-text-light; @teal2);
     .gridbox-color(@gridbox-text-light; @teal2; darken(@teal2, 5%); @teal2; @teal2; 83%);
   }
 
   &-teal3 {
-    .box-color(@gridbox-text-dark; @teal3);
+    //.box-color(@gridbox-text-dark; @teal3);
     .gridbox-color(@gridbox-text-dark; @teal3; darken(@teal3, 5%); @teal3; @gridbox-text-dark; 83%);
   }
   // Greens family
   &-green1 {
-    .box-color(@gridbox-text-light; @green1);
+    //.box-color(@gridbox-text-light; @green1);
     .gridbox-color(@gridbox-text-light; @green1; darken(@green1, 5%); @green1; @green1; 83%);
   }
 
   &-green2 {
-    .box-color(@white-color; @green2);
+    //.box-color(@white-color; @green2);
     .gridbox-color(@white-color; @green2; darken(@green2, 5%); @green2; @green2; 83%);
   }
 
   &-green3 {
-    .box-color(@gridbox-text-dark; @green3);
+    //.box-color(@gridbox-text-dark; @green3);
     .gridbox-color(@gridbox-text-dark; @green3; darken(@green3, 5%); @green3; @gridbox-text-dark; 83%);
   }
   // Greys family
   &-grey1 {
-    .box-color(@gridbox-text-light; @grey1);
+    //.box-color(@gridbox-text-light; @grey1);
     .gridbox-color(@gridbox-text-light; @grey1; darken(@grey1, 5%); @grey1; @grey1; 83%);
   }
 
   &-grey2 {
-    .box-color(@gridbox-text-light; @grey2);
+    //.box-color(@gridbox-text-light; @grey2);
     .gridbox-color(@gridbox-text-light; @grey2; darken(@grey2, 5%); @grey2; @grey2; 83%);
   }
 
   &-grey3 {
-    .box-color(@gridbox-text-dark; @grey3);
+    //.box-color(@gridbox-text-dark; @grey3);
     .gridbox-color(@gridbox-text-dark; @grey3; darken(@grey3, 5%); @grey3; @gridbox-text-dark; 83%);
   }
   // Whites and yellows family
   &-light1 {
-    .box-color(@gridbox-text-dark; @white1);
+    //.box-color(@gridbox-text-dark; @white1);
     .gridbox-color(@gridbox-text-dark; @white1; darken(@white1, 5%); @grey2; @gridbox-text-dark; 90%);
     // Exception - white full needs border.
     &.full {
@@ -427,12 +427,12 @@
   }
 
   &-light2 {
-    .box-color(@gridbox-text-dark; @white2);
+    //.box-color(@gridbox-text-dark; @white2);
     .gridbox-color(@gridbox-text-dark; @white2; darken(@grey3, 5%); @grey2; @gridbox-text-dark; 90%);
   }
 
   &-light3 {
-    .box-color(@gridbox-text-dark; @white3);
+    //.box-color(@gridbox-text-dark; @white3);
     .gridbox-color(@gridbox-text-dark; @white3; darken(@white3, 5%); @white3; @white3; 83%);
     // Exception with yellowish outline:
     &.outlined {
