Focus styles added to boxes

--- a/less/ku-colors.less
+++ b/less/ku-colors.less
@@ -1,80 +1,187 @@
 //
 // KU custom color families - use with grid boxes, fact boxes, etc.
 // --------------------------------------------------
-
 // Use with values in this order: Text color, background color.
 // Reds family
 
 .box {
   &-red1 {
     .box-color(@gridbox-text-light; @red1);
+
+    a {
+      &:focus {
+        outline: 1px dotted @gridbox-text-light;
+      }
+    }
   }
 
   &-red2 {
     .box-color(@gridbox-text-light; @red2);
+
+    a {
+      &:focus {
+        outline: 1px dotted @gridbox-text-light;
+      }
+    }
   }
 
   &-red3 {
     .box-color(@white-color; @red3);
+
+    a {
+      &:focus {
+        outline: 1px dotted @gridbox-text-light;
+      }
+    }
   }
   // Blues family
   &-blue1 {
     .box-color(@gridbox-text-light; @blue1);
+
+    a {
+      &:focus {
+        outline: 1px dotted @gridbox-text-light;
+      }
+    }
   }
 
   &-blue2 {
     .box-color(@gridbox-text-light; @blue2);
+
+    a {
+      &:focus {
+        outline: 1px dotted @gridbox-text-light;
+      }
+    }
   }
 
   &-blue3 {
     .box-color(@gridbox-text-dark; @blue3);
+
+    a {
+      &:focus {
+        outline: 1px dotted @gridbox-text-dark;
+      }
+    }
   }
   // Teals family
   &-teal1 {
     .box-color(@gridbox-text-light; @teal1);
+
+    a {
+      &:focus {
+        outline: 1px dotted @gridbox-text-light;
+      }
+    }
   }
 
   &-teal2 {
     .box-color(@gridbox-text-light; @teal2);
+
+    a {
+      &:focus {
+        outline: 1px dotted @gridbox-text-light;
+      }
+    }
   }
 
   &-teal3 {
     .box-color(@gridbox-text-dark; @teal3);
+
+    a {
+      &:focus {
+        outline: 1px dotted @gridbox-text-dark;
+      }
+    }
   }
   // Greens family
   &-green1 {
     .box-color(@gridbox-text-light; @green1);
+
+    a {
+      &:focus {
+        outline: 1px dotted @gridbox-text-light;
+      }
+    }
   }
 
   &-green2 {
     .box-color(@white-color; @green2);
+
+    a {
+      &:focus {
+        outline: 1px dotted @gridbox-text-light;
+      }
+    }
   }
 
   &-green3 {
     .box-color(@gridbox-text-dark; @green3);
+
+    a {
+      &:focus {
+        outline: 1px dotted @gridbox-text-dark;
+      }
+    }
   }
   // Greys family
   &-grey1 {
     .box-color(@gridbox-text-light; @grey1);
+
+    a {
+      &:focus {
+        outline: 1px dotted @gridbox-text-light;
+      }
+    }
   }
 
   &-grey2 {
     .box-color(@gridbox-text-light; @grey2);
+
+    a {
+      &:focus {
+        outline: 1px dotted @gridbox-text-light;
+      }
+    }
   }
 
   &-grey3 {
     .box-color(@gridbox-text-dark; @grey3);
+
+    a {
+      &:focus {
+        outline: 1px dotted @gridbox-text-dark;
+      }
+    }
   }
   // Whites and yellows family
   &-light1 {
     .box-color(@gridbox-text-dark; @white1);
+
+    a {
+      &:focus {
+        outline: 1px dotted @gridbox-text-dark;
+      }
+    }
   }
 
   &-light2 {
     .box-color(@gridbox-text-dark; @white2);
+
+    a {
+      &:focus {
+        outline: 1px dotted @gridbox-text-dark;
+      }
+    }
   }
 
   &-light3 {
     .box-color(@gridbox-text-dark; @white3);
+
+    a {
+      &:focus {
+        outline: 1px dotted @gridbox-text-light;
+      }
+    }
   }
 }
