[#44107] Add tabindex to cookie popup html

--- a/docs/_includes/components/ku-cookie-popup.html
+++ b/docs/_includes/components/ku-cookie-popup.html
@@ -20,7 +20,7 @@
             <span>Universitetet bruger forskellige produkter til at registrere brugernes adfærd på hjemmesiden med det formål løbende at forbedre vores service.</span>
           </button>
         </div>
-        <div class="ccc-table-wrapper" data-select="statistics">
+        <div tabindex="0" class="ccc-table-wrapper" data-select="statistics">
           <table class="table table-striped ccc-table">
             <caption class="sr-only">Statistikcookies</caption>
             <thead>
@@ -62,7 +62,7 @@
             <span>Universitetet bruger forskellige produkter til at markedsføre uddannelser, kurser, konferencer og udstillinger i søgemaskiner samt på hjemmeider og sociale medier med det formål at kunne give dig det mest relevante tilbud.</span>
           </button>
         </div>
-        <div class="ccc-table-wrapper" data-select="marketing">
+        <div tabindex="0" class="ccc-table-wrapper" data-select="marketing">
           <table class="table table-striped ccc-table">
             <caption class="sr-only">Markedsføringscookies</caption>
             <thead>
