--- a/less/ku-gridboxes.less
+++ b/less/ku-gridboxes.less
@@ -656,7 +656,7 @@
     &.text-down {
       // Add outline to white color boxes
       &.box-light1 {
-        border: 1px solid @grey3;
+        border: 1px solid @gray-light;
       }
     }
   }
