--- a/less/ku-gridboxes.less
+++ b/less/ku-gridboxes.less
@@ -414,7 +414,7 @@
 
   &-grey3 {
     .box-color(@gridbox-text-dark; @grey3);
-    .gridbox-color(@gridbox-text-dark; @grey3; darken(@grey3, 5%); @grey3; @gridbox-text-dark; 83%);
+    .gridbox-color(@gridbox-text-dark; @grey3; darken(@grey3, 5%); @gray-light; @gridbox-text-dark; 83%);
   }
   // Whites and yellows family
   &-light1 {
@@ -845,7 +845,7 @@
 
       &.text-down {
         &.box-light1 {
-          border: 1px solid @grey3;
+          border: 1px solid @gray-light;
         }
       }
     }
