--- a/less/ku-footer.less
+++ b/less/ku-footer.less
@@ -282,7 +282,7 @@
 
           &:active,
           &:focus {
-            .tab-focus-v2();
+            outline: 1px dotted @white-color;
             outline-offset: -3px;
           }
         }
