--- a/less/navs.less
+++ b/less/navs.less
@@ -125,7 +125,7 @@
       position: relative;
 
       &:focus {
-        .tab-focus-v2();
+        outline: 1px dotted @white-color;
         outline-offset: -2px;
       }
       @media (max-width: @screen-xs-max) {
