--- a/less/ku-footer.less
+++ b/less/ku-footer.less
@@ -128,7 +128,7 @@
         }
 
         &:focus {
-          .tab-focus-v2();
+          outline: 1px dotted @white-color;
           color: @white-color;
         }
       }
@@ -176,7 +176,7 @@
 
       &:focus {
         background-color: @ku-footer-icon-bg;
-        .tab-focus-v2();
+        outline: 1px dotted @white-color;
       }
     }
   }
