--- a/less/navbar.less
+++ b/less/navbar.less
@@ -661,7 +661,7 @@
   // KU specific:
   a {
     &:focus {
-      .tab-focus-v2();
+      outline: 1px dotted @white-color;
     }
   }
   background-color: @navbar-inverse-bg;
