Input border color

--- a/less/variables.less
+++ b/less/variables.less
@@ -329,7 +329,7 @@
 //** Text color for `<input>`s
 @input-color:                    @gray-dark;
 //** `<input>` border color
-@input-border:                   #bbb;
+@input-border:                   @gray-light;
 
 // TODO: Rename `@input-border-radius` to `@input-border-radius-base` in v4
 //** Default `.form-control` border radius
