Input border contrast

--- a/less/input-groups.less
+++ b/less/input-groups.less
@@ -146,6 +146,9 @@
 // -------------------------
 
 .input-group-btn {
+  // KU specic:
+  border-color: @gray-light;
+  // KU specic end
   position: relative;
   // Jankily prevent input button groups from wrapping with `white-space` and
   // `font-size` in combination with `inline-block` on buttons.
