Input border contrast

--- a/less/variables.less
+++ b/less/variables.less
@@ -287,11 +287,11 @@
 
 @btn-default-color:              @gray-dark;
 @btn-default-bg:                 #f4f4f4;
-@btn-default-border:             #b6b6b6;
+@btn-default-border:             #757575;
 
 @btn-primary-color:              @gray-dark;
 @btn-primary-bg:                 #fbfbfb;
-@btn-primary-border:             #b6b6b6;
+@btn-primary-border:             #757575;
 
 @btn-success-color:              @white-color;
 @btn-success-bg:                 @brand-success;
