--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -22,7 +22,7 @@
     color: @white-color;
 
     &:focus {
-      .tab-focus-v2();
+      outline: 1px dotted @white-color;
       outline-offset: 2px;
     }
   }
@@ -159,7 +159,7 @@
   }
 
   &:focus {
-    .tab-focus-v2();
+    outline: 1px dotted @white-color;
   }
 
   &.open {
