--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -203,8 +203,8 @@
 
   input {
     position: absolute;
-    opacity: 0;
-    margin: 0;
+    // opacity: 0;
+    margin-left: 26px!important;
 
     &:checked {
       & ~ .checkmark {
