--- a/less/ku-footer.less
+++ b/less/ku-footer.less
@@ -165,11 +165,9 @@
       align-items: center;
       justify-content: center;
       text-decoration: none;
-
-      &::before {
-        .icon;
-      }
-
+      // &::before {
+      //   .icon;
+      // }
       &:active {
         background-color: @ku-footer-icon-bg;
       }
@@ -177,6 +175,12 @@
       &:focus {
         background-color: @ku-footer-icon-bg;
         outline: 1px dotted @white-color;
+      }
+
+      & > span {
+        border-radius: inherit;
+        width: 100%;
+        text-align: center;
       }
     }
   }
