--- a/less/ku-gridboxes.less
+++ b/less/ku-gridboxes.less
@@ -36,6 +36,20 @@
       padding: 8px 18px 5px 10px;
       font-weight: 700;
       letter-spacing: 0.4px;
+
+      h3 {
+        font-size: inherit;
+        font-weight: inherit;
+        margin: 0;
+      }
+    }
+  }
+
+  .header {
+    h3 {
+      font-size: inherit;
+      font-weight: inherit;
+      margin: 0;
     }
   }
 
@@ -378,7 +392,7 @@
   }
 
   &-teal2 {
-      .box-color(@gridbox-text-light; @teal2);
+    .box-color(@gridbox-text-light; @teal2);
     .gridbox-color(@gridbox-text-light; @teal2; darken(@teal2, 5%); @teal2; @teal2; 83%);
   }
 
