Styling for h2 in navhead

--- a/less/ku-leftmenu.less
+++ b/less/ku-leftmenu.less
@@ -25,6 +25,13 @@
       border-radius: @border-radius-base;
     }
 
+    h2 {
+      font-size: inherit;
+      font-weight: inherit;
+      margin: 0;
+      letter-spacing: inherit;
+    }
+
     a {
       color: inherit;
       text-decoration: none;
