--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -113,6 +113,7 @@
       input[type="text"] {
         .placeholder(@color: @text-color);
         opacity: 0.90;
+        border: 0;
 
         &:placeholder-shown {
           text-overflow: ellipsis;
