--- a/less/ku-misc.less
+++ b/less/ku-misc.less
@@ -127,13 +127,13 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    top: 0;
     background-color: #a1a1a1;
     border-radius: 50%;
     width: 100%;
     height: 100%;
 
     &:before {
-      line-height: 40px;
       font-size: 18px;
     }
   }
