--- a/less/faculties/faelles.less
+++ b/less/faculties/faelles.less
@@ -15,5 +15,7 @@
 #botxo-button-, #botxo-openImg- {
   &:focus, &:focus-within {
     .tab-focus-v2()!important;
+    outline-offset: 1px;
+    border: 1px solid #fff!important;
   }
 }
