--- a/docs/assets/css/ku-dk-frontpage/ku-dk-frontpage.css
+++ b/docs/assets/css/ku-dk-frontpage/ku-dk-frontpage.css
@@ -498,9 +498,6 @@ video {
 
 .video-container {
   position: relative;
-  width: calc(100vw - var(--scroll-bar));
-  margin-left: calc(-50vw + 50% + (var(--scroll-bar)/ 2));
-  margin-right: calc(-50vw + 50% + (var(--scroll-bar)/ 2));
 }
 
 .video-container>video, .video-container>img {
@@ -1093,6 +1090,12 @@ video {
 @media (max-width: 991px) {
   .ku-branding .ku-branding-text .ku-branding-text-major {
     font-size: 18px;
+  }
+
+  .video-container {
+    width: calc(100vw - var(--scroll-bar));
+    margin-left: calc(-50vw + 50% + (var(--scroll-bar)/ 2));
+    margin-right: calc(-50vw + 50% + (var(--scroll-bar)/ 2));
   }
 
   .slick-slider .tiles-x .tilebox {
