--- a/less/swiperJs/pagination.less
+++ b/less/swiperJs/pagination.less
@@ -9,12 +9,6 @@
     .looper( @index + 1 );
   }
 }
-
-:root {
-  /*
-  --swiper-pagination-color: var(--swiper-theme-color);
-  */
-}
 .swiper-pagination {
   position: absolute;
   text-align: center;
@@ -65,7 +59,7 @@
   height: 8px;
   display: inline-block;
   border-radius: 50%;
-  background: #000;
+  background: @gray-base;
   opacity: 0.2;
   button& {
     border: none;
@@ -73,6 +67,9 @@
     padding: 0;
     box-shadow: none;
     appearance: none;
+  }
+  &:focus {
+    .tab-focus();
   }
   .swiper-pagination-clickable & {
     cursor: pointer;
@@ -123,7 +120,7 @@
 }
 /* Progress */
 .swiper-pagination-progressbar {
-  background: rgba(0, 0, 0, 0.25);
+  background: rgba(@gray-base, 0.25);
   position: absolute;
   .swiper-pagination-progressbar-fill {
     background: var(--swiper-pagination-color, var(--swiper-theme-color));
