--- a/less/swiperJs/navigation.less
+++ b/less/swiperJs/navigation.less
@@ -1,12 +1,13 @@
-.navigation-color-loop(@ruleset) when (length( @colors ) >= 1) {
+.navigation-color-loop(@ruleset) when (length(@colors) > = 1) {
   @length: length(@colors);
-  .looper( 1 );
-  .looper( @index ) when ( @index <= @length ) and (length(extract( @colors, @index )) = 2) {
+  .looper(1);
+
+  .looper(@index) when (@index <= @length) and (length(extract(@colors, @index)) = 2) {
     @navPair: extract(@colors, @index);
     @navColorName: extract(@navPair, 1);
     @navColorValue: extract(@navPair, 2);
     @ruleset();
-    .looper( @index + 1 );
+    .looper(@index + 1);
   }
 }
 
@@ -16,8 +17,9 @@
   --swiper-navigation-color: var(--swiper-theme-color);
   */
 }
-.swiper-button-prev,
-.swiper-button-next {
+
+.swiper-button-next,
+.swiper-button-prev {
   position: absolute;
   top: 50%;
   transform: translate(0,-50%);
@@ -29,12 +31,14 @@
   align-items: center;
   justify-content: center;
   color: inherit;
-  opacity: .3;
+  opacity: 0.3;
+
   &.swiper-button-disabled {
     opacity: 0.25;
     cursor: auto;
     pointer-events: none;
   }
+
   &:before {
     font-family: @custom-icon-font-family-name;
     content: @icon-arrow;
@@ -45,19 +49,28 @@
     // font-variant: initial;
     // line-height: 1;
   }
+
   &:focus {
     .tab-focus();
   }
+
+  &:hover, &:focus {
+    &:before {
+      opacity: 1;
+    }
+  }
 }
+
 .swiper-button-prev,
 .swiper-container-rtl .swiper-button-next {
-.icon-arrow-back;
+  .icon-arrow-back;
   // &:before {
   //
   // }
   left: 10px;
   right: auto;
 }
+
 .swiper-button-next,
 .swiper-container-rtl .swiper-button-prev {
   // &:before {
@@ -66,14 +79,8 @@
   right: 10px;
   left: auto;
 }
-.navigation-color-loop({
-  .swiper-button-prev,
-  .swiper-button-next {
-    &.swiper-button-@{navColorName} {
-      --swiper-navigation-color: @navColorValue;
-    }
-  }
-});
+.navigation-color-loop({ .swiper-button-prev, .swiper-button-next { &.swiper-button-@{navColorName} { --swiper-navigation-color: @navColorValue; } } });
+
 .swiper-button-lock {
   display: none;
 }
