--- a/less/ku-swiperjs.less
+++ b/less/ku-swiperjs.less
@@ -70,6 +70,9 @@
   height: 100%;
   position: relative;
   transition-property: transform;
+  &:focus {
+    .tab-focus-v2();
+  }
 }
 
 .swiper-slide-invisible-blank {
