--- a/less/swiperJs/navigation.less
+++ b/less/swiperJs/navigation.less
@@ -55,7 +55,8 @@
     .tab-focus();
   }
 
-  &:hover, &:focus {
+  &:focus,
+  &:hover {
     &:before {
       opacity: 1;
     }
@@ -65,13 +66,13 @@
 .swiper-button-prev,
 .swiper-container-rtl .swiper-button-next {
   .icon-arrow-back;
-  left: 10px;
+  left: 5%;
   right: auto;
 }
 
 .swiper-button-next,
 .swiper-container-rtl .swiper-button-prev {
-  right: 10px;
+  right: -5%;
   left: auto;
 }
 .navigation-color-loop({ .swiper-button-prev, .swiper-button-next { &.swiper-button-@{navColorName} { --swiper-navigation-color: @navColorValue; } } });
