--- a/less/swiperJs/pagination.less
+++ b/less/swiperJs/pagination.less
@@ -25,6 +25,7 @@
   }
 }
 /* Common Styles */
+
 .swiper-container-horizontal > .swiper-pagination-bullets,
 .swiper-pagination-custom,
 .swiper-pagination-fraction {
@@ -34,6 +35,7 @@
   width: 100%;
 }
 /* Bullets */
+
 .swiper-pagination-bullets-dynamic {
   overflow: hidden;
   font-size: 0;
@@ -71,7 +73,7 @@
 .swiper-pagination-bullet {
   width: 6px;
   height: 6px;
-  margin: 0 3px!important;
+  margin: 0 3px!important !important;
   display: inline-block;
   border-radius: 50%;
   background: @gray-base;
@@ -149,6 +151,7 @@
   }
 }
 /* Progress */
+
 .swiper-pagination-progressbar {
   background: rgba(@gray-base, 0.25);
   position: absolute;
