--- a/less/swiperJs/pagination.less
+++ b/less/swiperJs/pagination.less
@@ -73,7 +73,7 @@
 .swiper-pagination-bullet {
   width: 6px;
   height: 6px;
-  margin: 0 3px!important !important;
+  margin: 0 3px !important;
   display: inline-block;
   border-radius: 50%;
   background: @gray-base;
