--- a/less/ku-swiperjs.less
+++ b/less/ku-swiperjs.less
@@ -70,7 +70,7 @@
   height: 100%;
   position: relative;
   transition-property: transform;
-  &:focus {
+  &:focus, &:active {
     .tab-focus-v2();
     outline-offset: -1px;
   }
