--- a/docs/assets/css/doctypes/medarbejderoversigt.css
+++ b/docs/assets/css/doctypes/medarbejderoversigt.css
@@ -79,5 +79,19 @@ th.emplistimage:after, th.emplistemail:after {
 }
 
 .dimmed {
-    color: #757575!important;
+  color: #757575 !important;
+}
+
+.pure-integration-content {
+  -webkit-overflow-scrolling: touch;
+  overflow-y: scroll;
+  width: 100%;
+  height: 600px;
+}
+
+.pure-integration-frame {
+  width: 100%;
+  height: 100%;
+  overflow-y: hidden;
+  overflow-x: auto;
 }
