--- a/docs/assets/css/pure/pure.css
+++ b/docs/assets/css/pure/pure.css
@@ -4,11 +4,16 @@
 #branding-decoration,
 #left-sidebar,
 #right-sidebar,
-#footer, .breadcrumbs {
+#footer, .breadcrumb {
   display: none !important;
 }
 
 #content {
   border-top: 0;
   padding-top: 0;
+}
+
+#content-wrapper {
+  width: 100%;
+  max-width: 496px;
 }
