--- a/docs/assets/css/pure/pure.css
+++ b/docs/assets/css/pure/pure.css
@@ -13,8 +13,33 @@
   padding-top: 0;
 }
 
+html, body {
+  overflow-y: hidden;
+}
+
+body {
+  -webkit-font-smoothing: antialiased;
+  text-rendering: optimizeLegibility;
+  font-family: "Open Sans", Helvetica, Arial, sans-serif;
+  font-size: 13px;
+  font-style: normal;
+  font-variant: normal;
+  font-weight: 400;
+  letter-spacing: .3px;
+  line-height: 1.5;
+  color: #252525;
+  height: 100%;
+  position: relative;
+  direction: ltr;
+}
+
 #wrapper, #content-wrapper {
   width: 100%;
   max-width: 496px;
   border: 0;
+}
+
+h2.title {
+  font-size: 20px;
+  font-weight: 600;
 }
