New footer color

--- a/less/ku-footer.less
+++ b/less/ku-footer.less
@@ -28,7 +28,7 @@
 
 #globalfooter {
   position: relative;
-  background: @gray-light;
+  background: @ku-footer-bg;
   // @media (min-width: @screen-sm) {
   //   background: linear-gradient(to bottom, rgba(@gray-light, 1) 0%, rgba(134, 134, 134, 1) 25%, rgba(142, 141, 141, 1) 50%, rgba(136, 136, 136, 1) 80%, rgba(128, 128, 128, 1) 100%);
   // }
