--- a/less/variables.less
+++ b/less/variables.less
@@ -30,12 +30,14 @@
 @ku-light-grey:          #606060;
 @ku-search-icons:        @gray-666;
 @ku-news-gray:           #4a4949;
-@ku-footer-icon-bg:      @gray-666;
+@ku-footer-bg:           #646464;
+@ku-footer-icon-bg:      #555;
 @ku-footer-icon-size:    28px;
 
 // KU specific colors
 @beredsskabs-banner-bg: #ffe100;
 @ku-cookiebox-bg:       #505050;
+
 
 // FAK colors
 @ku-red:                #901a1e;
