Mobile menu focus styles

--- a/less/ku-mobile-menu.less
+++ b/less/ku-mobile-menu.less
@@ -58,6 +58,12 @@
         border-top: 0;
       }
     }
+    .mm-listitem__text {
+      &:focus {
+        .tab-focus-v2();
+        outline-offset: -1px;
+      }
+    }
   }
 
   .mm-navbar {
