--- a/less/mixins/tab-focus.less
+++ b/less/mixins/tab-focus.less
@@ -17,5 +17,5 @@
 
 .tab-focus-v2() {
   // Preferably used for dark backgrounds such as global menus and footer.
-  outline: 1px dotted @outline-color2;
+  outline: 1px solid @outline-color2;
 }
