Chatbot mobile menu stacking fix

--- a/less/faculties/faelles.less
+++ b/less/faculties/faelles.less
@@ -11,7 +11,9 @@
     background: #ae1b65 !important;
   }
 }
-
+#botxo-chat- {
+  z-index: 2!important;
+}
 #botxo-button-, #botxo-openImg- {
   &:focus, &:focus-within {
     .tab-focus-v2()!important;
