--- a/less/ku-mobile-menu.less
+++ b/less/ku-mobile-menu.less
@@ -214,6 +214,11 @@
     }
   }
 }
+
+.mm-menu_position-front.mm-menu_opened {
+  z-index: 10!important;
+}
+
 @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
   body.modal-open .mm-slideout {
     // Bootstrap modals collide with mobile menu in IE11:
