Remove double gridbox header styling

--- a/less/ku-gridboxes.less
+++ b/less/ku-gridboxes.less
@@ -45,13 +45,13 @@
     }
   }
 
-  .header {
-    h3 {
-      font-size: inherit;
-      font-weight: inherit;
-      margin: 0;
-    }
-  }
+  // .header {
+  //   h3 {
+  //     font-size: inherit;
+  //     font-weight: inherit;
+  //     margin: 0;
+  //   }
+  // }
 
   .box2 {
     padding: 5px @padding10 @padding10;
