--- a/less/ku-gridboxes.less
+++ b/less/ku-gridboxes.less
@@ -40,18 +40,12 @@
       h3 {
         font-size: inherit;
         font-weight: inherit;
+        line-height: inherit;
+        letter-spacing: inherit;
         margin: 0;
       }
     }
   }
-
-  // .header {
-  //   h3 {
-  //     font-size: inherit;
-  //     font-weight: inherit;
-  //     margin: 0;
-  //   }
-  // }
 
   .box2 {
     padding: 5px @padding10 @padding10;
