Admin editor styles

--- a/less/ku-editor-overrides.less
+++ b/less/ku-editor-overrides.less
@@ -3,6 +3,12 @@
 // Remove these styles when all pages use Bootstrap
 // ------------------
 
+.mce-window {
+  iframe {
+  position: relative;
+}
+}
+
 .mce-content-body {
   &#content {
     display: block;
@@ -182,5 +188,6 @@
 
   .mce-panel {
     width: 100% !important;
+    left: 0;
   }
 }
