Admin editor styles

--- a/less/ku-editor-overrides.less
+++ b/less/ku-editor-overrides.less
@@ -183,11 +183,12 @@
   }
 }
 
-.editor-collapsible {
+  .editor-collapsible {
   padding: 0 15px;
 
   .mce-panel {
+    //Aligning editors inside editors
     width: 100% !important;
-    left: 0;
+    left: 0!important;
   }
 }
