Cookie popup focus

--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -254,7 +254,8 @@
   }
 
   &:focus {
-    outline: 1px solid @outline-color2;
+    outline: 1px solid @white-color;
+    outline-offset: 2px;
   }
 }
 
