--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -202,11 +202,14 @@
   cursor: default!important;
 
   input {
-    visibility: hidden;
+    position: absolute !important;
+    height: 1px;
+    width: 1px;
+    overflow: hidden;
+    clip: rect(1px, 1px, 1px, 1px);
     // position: absolute;
     // opacity: 0;
     // margin-left: -26px!important;
-
     &:checked {
       & ~ .checkmark {
         background-color: #005cc8;
